# tja2fumen

./: .gitignore  LICENSE.txt  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: check_code_quality.yml  create_release.yml  test_and_publish_release.yml
src/tja2fumen/: __init__.py  classes.py  constants.py  converters.py  hp_values.csv  main.py  parsers.py  types.py  utils.py  writers.py
src/tja2fumen/soulgauge_LUTs/: Easy-1.csv  Easy-4-5.csv  Normal-5-7.csv  Oni-8.csv  Oni-9-10.csv  byte1213_Easy-1.csv  byte1213_Easy-2-3.csv  byte1213_Easy-4-5.csv  byte1213_Hard-1-2.csv  byte1213_Hard-3.csv  byte1213_Hard-4.csv  byte1213_Hard-5-8.csv  byte1213_Normal-1-2.csv  byte1213_Normal-3.csv  byte1213_Normal-4.csv  byte1213_Normal-5-7.csv  byte1213_Oni-1-7.csv  byte1213_Oni-8.csv  byte1213_Oni-9-10.csv  byte1617_Easy-1.csv  byte1617_Easy-2-3.csv  byte1617_Easy-4-5.csv  byte1617_Hard-1-2.csv  byte1617_Hard-3.csv  byte1617_Hard-4.csv  byte1617_Hard-5-8.csv  byte1617_Normal-1-2.csv  byte1617_Normal-3.csv  byte1617_Normal-4.csv  byte1617_Normal-5-7.csv  byte1617_Oni-1-7.csv  byte1617_Oni-8.csv  byte1617_Oni-9-10.csv  byte2021_Easy-2-3.csv  byte2021_Hard-1-2.csv  byte2021_Hard-3.csv  byte2021_Hard-4.csv  byte2021_Hard-5-8.csv  byte2021_Normal-1-2.csv  byte2021_Normal-3.csv  (+2 more)
testing/: conftest.py  test_command_support.py  test_conversion.py  test_custom_tjas.py  test_songs.py  test_soulgauge_LUTs.py
testing/data/: butou5.tja  clsca.tja  emma.tja  genpe.tja  gimcho.tja  hol6po.tja  ia6cho.tja  imcanz.tja  linda.tja  mikdp.tja  senpac.tja  shoto9.tja
testing/data/dummy_tjas/: basic_song.tja  basic_song_2P.tja  missing_balloon.tja  missing_course.tja  missing_level.tja  missing_score.tja  notes_double_kusudama.tja  notes_hands.tja  notes_senotechange.tja  notes_sim_only.tja  unsupported.tja
tja2fumen/: constants.py  converters.py  main.py  parsers.py  parsetja.py  tja2fumen.py  utils.py  writers.py
