[project]
name = "tja2fumen"
version = "0.6.0"
description = "Convert TJA chart files into fumen (.bin) chart files"
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE.txt"}
keywords = ["taiko", "tatsujin", "fumen", "TJA"]

[project.urls]  # Optional
"Homepage" = "https://github.com/vivaria/tja2fumen/"
"Bug Reports" = "https://github.com/vivaria/tja2fumen/issues/"
"Source" = "https://github.com/vivaria/tja2fumen/"

# The following would provide a command line executable called `sample`
# which executes the function `main` from this package when invoked.
[project.scripts]  # Optional
tja2fumen = "tja2fumen:main"

[project.optional-dependencies]
dev = ["pytest", "build", "pyinstaller", "twine", "toml-cli",
       "flake8", "pyproject-flake8"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-vv --tb=short"
console_output_style = "count"

[tool.flake8]
exclude = "venv/"
per-file-ignores = """
    ./src/tja2fumen/types.py: E221
    ./testing/test_conversion.py: E221, E272
"""
